--- a/group_chat_frontend/src/App.css
+++ b/group_chat_frontend/src/App.css
@@ -15,7 +15,7 @@ body {
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
-  width: 300px;
+  width: 500px;
 }
 
 h2 {
@@ -63,4 +63,101 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+
+.chat-container {
+  width: 500px;
+  margin: 20px auto;
+  background: #f8f9fa;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.chat-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background: #08417e;
+  color: white;
+  border-radius: 10px 10px 0 0;
+}
+
+.chat-box {
+  max-height: 400px;
+  overflow-y: auto;
+  padding: 10px;
+}
+
+.chat-message {
+  margin: 10px 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-message.self {
+  align-self: flex-end;
+  text-align: right;
+  background: #8ec2fa;
+  color: white;
+  padding: 8px;
+  border-radius: 10px;
+}
+
+.chat-message.other {
+  align-self: flex-start;
+  background: #e9ecef;
+  padding: 8px;
+  border-radius: 10px;
+}
+
+.sender {
+  font-size: 15px;
+  font-weight: bold;
+  color: #507172;
+}
+
+.message-content {
+  font-size: 15px;
+  color: black;
+  font-weight: bold;
+}
+
+.timestamp {
+  font-size: 10px;
+  color: rgb(0, 0, 0);
+  font-style: italic;
+}
+
+.chat-input {
+  display: flex;
+  margin-top: 10px;
+}
+
+.chat-input input {
+  flex-grow: 1;
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.chat-input button {
+  padding: 8px 25px;
+  color: white;
+  border: none;
+  margin-left: 5px;
+  cursor: pointer;
+  background: green;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.logout-btn {
+  background: red;
+  border: none;
+  padding: 5px 10px;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
 }
